--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "grpc_client.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint-proto": "grpc_tools_node_protoc --js_out=import_style=commonjs,binary:./proto  --grpc_out=grpc_js:./proto  ./server.proto"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,8 @@
     "@grpc/grpc-js": "^1.7.3",
     "@grpc/proto-loader": "^0.7.3",
     "bluebird": "^3.5.1",
-    "grpc": "^1.24.11"
+    "google-protobuf": "^3.21.2",
+    "grpc": "^1.24.11",
+    "grpc-tools": "^1.11.3"
   }
 }
